--- a/web/index.html
+++ b/web/index.html
@@ -1,24 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Flutter Samples.">
+  <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -33,6 +20,26 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js"></script>
+
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyDzvXUTmVhQwAEAefUTY3iAw9sLWWaEWeg",
+      authDomain: "course-a0d02.firebaseapp.com",
+      projectId: "course-a0d02",
+      storageBucket: "course-a0d02.firebasestorage.app",
+      messagingSenderId: "565733212138",
+      appId: "1:565733212138:web:e20e9ccfc645261ec23c93",
+      measurementId: "G-D2VMQW8JXB"
+    };
+    firebase.initializeApp(firebaseConfig);
+  </script>
+
+  <!-- Flutter app -->
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
